# oop_3

./: .gitignore  CMakeLists.txt  README.md
include/: Figure.h  Hexagon.h  Pentagon.h  Rhombus.h
src/: Figure.cpp  Hexagon.cpp  Pentagon.cpp  Rhombus.cpp
tests/: test_figures.cpp
